# hident

./: .gitignore  Makefile  README.md  pyproject.toml
hident/: hident.py
sparql/: labels.sparql  minimal.sparql  sco.sparql
tests/: test_hident.py
tests/data/: envo_sco.tsv  soil_ebs_curated_termlist.txt  termlist.txt
