[tool.poetry]
name = "hident"
version = "0.1.2"
description = ""
authors = ["Mark A. Miller <mamillerpa@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.3"
click-log = "^0.3.2"
prefixcommons = "^0.1.9"
pandas = "^1.3.5"
# Jinja2 = "^3.0.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
hident = 'hident.hident:hident'
